# StudyNdk

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/stone/study/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniUtil.cpp  JniUtil.h
app/src/main/cpp/encrypt/: Encrypt.cpp
app/src/main/cpp/ffmpeg_50/: decode_pcm_yuv.cpp  decode_pcm_yuv.h  test.cpp
app/src/main/cpp/ffmpeg_50/include/libavformat/: avio.h
app/src/main/cpp/ffmpeg_50/include/libavutil/: ffversion.h
app/src/main/cpp/mp3/: mp3_encoder.cpp  mp3_encoder.h
app/src/main/cpp/s_java/: hello.cpp
app/src/main/cpp/s_kt/: hello.cpp
app/src/main/java/com/stone/study/ndk/: MainActivity.kt
app/src/main/java/com/stone/study/ndk/base/: SampleAdapter.kt  StoneApplication.kt
app/src/main/java/com/stone/study/ndk/ui/: MainActivity.kt
app/src/main/java/com/stone/study/ndk/ui/encrypt/: EncryptActivity.kt
app/src/main/java/com/stone/study/ndk/ui/ffmpeg/: FFMpegActivity.kt
app/src/main/java/com/stone/study/ndk/ui/jni/: JniActivity.kt  JniActivityForJava.java
app/src/main/java/com/stone/study/ndk/ui/mp3/: Mp3EncodeActivity.kt
app/src/main/java/com/stone/study/ndk/ui/opengl/: OpenGLActivity.kt
app/src/main/java/com/stone/study/ndk/util/: ToastStone.kt
app/src/main/res/layout/: activity_encrypt.xml  activity_ffmpeg.xml  activity_jni_java.xml  activity_main.xml  activity_mp3.xml  item_simple_list1.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/stone/study/ndk/: ExampleUnitTest.kt
lib_permission/: build.gradle  gradle.properties
lib_permission/src/androidTest/java/com/flashexpress/permission/sample/: ExampleInstrumentedTest.kt
lib_permission/src/main/: AndroidManifest.xml
lib_permission/src/main/java/com/flashexpress/permission/: DialogUtil.kt  PermissionCheck.kt
lib_permission/src/main/res/values/: strings.xml
lib_permission/src/test/java/com/flashexpress/permission/sample/: ExampleUnitTest.kt
